objects/pse__VersionItem_Assignment__c.object
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of an assignment taken at the time the version is created.</description>
    <fields>
        <fullName>pse__Assignment_Name__c</fullName>
        <description>The name of the assignment referenced in the version.</description>
        <inlineHelpText>The name of the assignment referenced in the version.</inlineHelpText>
        <label>Assignment Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Number__c</fullName>
        <description>The number of the assignment referenced in the version.</description>
        <inlineHelpText>The number of the assignment referenced in the version.</inlineHelpText>
        <label>Assignment Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Rate__c</fullName>
        <description>The bill rate on the assignment referenced in the version.</description>
        <inlineHelpText>The bill rate on the assignment referenced in the version.</inlineHelpText>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Amount__c</fullName>
        <description>The cost rate amount on the assignment referenced in the version.</description>
        <inlineHelpText>The cost rate amount on the assignment referenced in the version.</inlineHelpText>
        <label>Cost Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Currency_Code__c</fullName>
        <description>The cost rate currency code on the assignment referenced in the version.</description>
        <inlineHelpText>The cost rate currency code on the assignment referenced in the version.</inlineHelpText>
        <label>Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate__c</fullName>
        <description>The cost rate on the assignment referenced in the version.</description>
        <inlineHelpText>The cost rate on the assignment referenced in the version.</inlineHelpText>
        <label>Cost Rate</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <description>The end date for the assignment referenced in the version.</description>
        <inlineHelpText>The end date for the assignment referenced in the version.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The billable indicator on the assignment referenced in the version.</description>
        <inlineHelpText>The billable indicator on the assignment referenced in the version.</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Location__c</fullName>
        <description>The location associated with the assignment referenced in the version.</description>
        <inlineHelpText>The location associated with the assignment referenced in the version.</inlineHelpText>
        <label>Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__MilestoneId__c</fullName>
        <description>The ID of the milestone associated with the assignment referenced in the version.</description>
        <inlineHelpText>The ID of the milestone associated with the assignment referenced in the version.</inlineHelpText>
        <label>Milestone Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__MilestoneName__c</fullName>
        <description>The name of the milestone associated with the assignment referenced in the version.</description>
        <inlineHelpText>The name of the milestone associated with the assignment referenced in the version.</inlineHelpText>
        <label>Milestone Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedById__c</fullName>
        <description>The original created by ID for the Assignment referenced in the version.</description>
        <inlineHelpText>The original created by ID for the Assignment referenced in the version.</inlineHelpText>
        <label>Original Created By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedByName__c</fullName>
        <description>The original created by name for the assignment referenced in the version.</description>
        <inlineHelpText>The original created by name for the assignment referenced in the version.</inlineHelpText>
        <label>Original Created By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedDate__c</fullName>
        <description>The original created date for the assignment referenced in the version.</description>
        <inlineHelpText>The original created date for the assignment referenced in the version.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__OriginalId__c</fullName>
        <description>The original ID of the assignment referenced in the version.</description>
        <inlineHelpText>The original ID of the assignment referenced in the version.</inlineHelpText>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedById__c</fullName>
        <description>The original last modified by ID for the assignment referenced in the version.</description>
        <inlineHelpText>The original last modified by ID for the assignment referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedByName__c</fullName>
        <description>The original last modified by name for the assignment referenced in the version.</description>
        <inlineHelpText>The original last modified by name for the project referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedDate__c</fullName>
        <description>The original last modified date for the assignment referenced in the version.</description>
        <inlineHelpText>The original last modified date for the assignment referenced in the version.</inlineHelpText>
        <label>Original Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__OriginalOwnerId__c</fullName>
        <description>The original owner ID for the assignment referenced in the version.</description>
        <inlineHelpText>The original owner ID for the assignment referenced in the version.</inlineHelpText>
        <label>Original Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalOwnerName__c</fullName>
        <description>The original owner name for the assignment referenced in the version.</description>
        <inlineHelpText>The original owner name for the assignment referenced in the version.</inlineHelpText>
        <label>Original Owner Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Percentage_Allocated__c</fullName>
        <description>The percentage allocated in the assignment referenced in the version.</description>
        <inlineHelpText>The percentage allocated in the assignment referenced in the version.</inlineHelpText>
        <label>Percentage Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task_Hours__c</fullName>
        <description>The project task hours for the assignment referenced in the version.</description>
        <inlineHelpText>The project task hours for the assignment referenced in the version.</inlineHelpText>
        <label>Project Task Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Rate_CardId__c</fullName>
        <description>The ID of the rate card associated with the assignment referenced in the version.</description>
        <inlineHelpText>The ID of the rate card associated with the assignment referenced in the version.</inlineHelpText>
        <label>Rate Card Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Rate_CardName__c</fullName>
        <description>The name of the rate card associated with the assignment referenced in the version.</description>
        <inlineHelpText>The name of the rate card associated with the assignment referenced in the version.</inlineHelpText>
        <label>Rate Card Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ResourceId__c</fullName>
        <description>The resource ID on the assignment referenced in the version.</description>
        <inlineHelpText>The resource ID on the assignment referenced in the version.</inlineHelpText>
        <label>Resource Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ResourceName__c</fullName>
        <description>The name of the resource associated with the assignment referenced in the version.</description>
        <inlineHelpText>The name of the resource associated with the assignment referenced in the version.</inlineHelpText>
        <label>Resource Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_RequestId__c</fullName>
        <description>The ID of the resource request associated with the assignment referenced in the version.</description>
        <inlineHelpText>The ID of the resource request associated with the assignment referenced in the version.</inlineHelpText>
        <label>Resource Request Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_RequestName__c</fullName>
        <description>The name of the resource request associated with the assignment referenced in the version.</description>
        <inlineHelpText>The name of the resource request associated with the assignment referenced in the version.</inlineHelpText>
        <label>Resource Request Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <description>The name of the resource associated with the assignment referenced in the version.</description>
        <inlineHelpText>The name of the resource associated with the assignment referenced in the version.</inlineHelpText>
        <label>Resource</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Role__c</fullName>
        <description>The role associated with the assignment referenced in the version.</description>
        <inlineHelpText>The role associated with the assignment referenced in the version.</inlineHelpText>
        <label>Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ScheduleId__c</fullName>
        <description>The ID of the schedule associated with the assignment referenced in the version.</description>
        <inlineHelpText>The ID of the schedule associated with the assignment referenced in the version.</inlineHelpText>
        <label>Schedule Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ScheduleName__c</fullName>
        <description>The name of the schedule associated with the assignment referenced in the version.</description>
        <inlineHelpText>The name of the schedule associated with the assignment referenced in the version.</inlineHelpText>
        <label>Schedule Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Hours__c</fullName>
        <description>The scheduled hours on the assignment referenced in the version.</description>
        <inlineHelpText>The scheduled hours on the assignment referenced in the version.</inlineHelpText>
        <label>Scheduled Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>The start date of the assignment referenced in the version.</description>
        <inlineHelpText>The start date of the assignment referenced in the version.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The status on the assignment referenced in the version.</description>
        <inlineHelpText>The status on the assignment referenced in the version.</inlineHelpText>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The time credited on the assignment referenced in the version.</description>
        <inlineHelpText>The time credited on the assignment referenced in the version.</inlineHelpText>
        <label>Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The time excluded on the assignment referenced in the version.</description>
        <inlineHelpText>The time excluded on the assignment referenced in the version.</inlineHelpText>
        <label>Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Version__c</fullName>
        <description>A lookup to the version.</description>
        <inlineHelpText>A lookup to the version.</inlineHelpText>
        <label>Version</label>
        <referenceTo>pse__Version__c</referenceTo>
        <relationshipLabel>Version Item Assignments</relationshipLabel>
        <relationshipName>VersionItem_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Version Item Assignment</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PVA-{0000}</displayFormat>
        <label>Version Item Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>